feat: support mapping external field to body sections
